--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -10,8 +10,10 @@
     <!-- <Nullable>enable</Nullable> -->
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
+    <IsDesktopMSBuild Condition=" '$(MSBuildRuntimeType)' == '' OR '$(MSBuildRuntimeType)' == 'Full' ">true</IsDesktopMSBuild>
     <DesktopOnlyFrameworks>net45;net20</DesktopOnlyFrameworks>
-    <PlatformSpecificFrameworks>$(DesktopOnlyFrameworks);uap10.0</PlatformSpecificFrameworks> <!-- win8 -->
+    <PlatformSpecificFrameworks>$(DesktopOnlyFrameworks)</PlatformSpecificFrameworks>
+    <PlatformSpecificFrameworks Condition=" '$(IsDesktopMSBuild)' == 'true' ">$(DesktopOnlyFrameworks);uap10.0</PlatformSpecificFrameworks> <!-- win8 -->
     <!-- Target frameworks beyond .NET Standard 1.1 are added to individual projects on an as-needed basis. -->
     <PortableOnlyFrameworks>netstandard1.1</PortableOnlyFrameworks>
     <PlatformAndPortableFrameworks>$(PortableOnlyFrameworks);$(PlatformSpecificFrameworks)</PlatformAndPortableFrameworks>
